[project]
name = "litestartest"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "vikigenius", email = "v9balasu@uwaterloo.ca" }
]
dependencies = [
    "litestar[standard]>=2.12.1",
    "advanced-alchemy[uuid]>=0.20.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.9",
    "basedpyright>=1.18.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/litestartest"]
